Background image, ticket background and logo refactored

--- a/second_task/index.html
+++ b/second_task/index.html
@@ -1,19 +1,31 @@
-<html height = 100% lang="en">
-    
-       
+<html height=100% lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<link rel="stylesheet" href="design.css">
-
-
-
+    <link rel="stylesheet" href="design.css">
 </head>
 
-<body class="body"  >
-    <div><img src="assets/logo1.png" alt="logo1"></div>
-    <div><img src="assets" alt="" srcset=""></div>
+<header>
+
+</header>
+
+
+
+<body>
+    <div class="ticket-background">
+        <h5 class=>Your Ticket</h5>
+
+    </div>
+
+    <div class="logo">
+        <img class="logo1" src="assets/logo1.png" alt="" srcset="">
+        <img class="logo2" src="assets/logo2.png" alt="" srcset="">
+    </div>
+
 </body>
+
 </html>
