--- a/second_task/index.html
+++ b/second_task/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="design.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 
 <header>
@@ -17,7 +18,18 @@
 
 <body>
     <div class="ticket-background">
-        <h5 class=>Your Ticket</h5>
+        <h5 class=>Your ticket</h5>
+
+        <div class="ticket-no-container">
+
+            <p class="info-text">Ticket No:</p>
+            <p class="expo-text"> 023891213</p>
+
+
+
+
+
+        </div>
 
     </div>
 
