added prices grid

--- a/second_task/index.html
+++ b/second_task/index.html
@@ -22,14 +22,27 @@
 
         <div class="ticket-no-container">
 
+
             <p class="info-text">Ticket No:</p>
             <p class="expo-text"> 023891213</p>
 
-
-
+        </div>
+        <div class="prices">
+            <div class="group5">
+                <div class="info-text">VIP: </div>
+                <div class="expo-text">seats 01</div>
+                <div class="expo-text">$14000</div>
+                <div class="info-text">VIP: </div>
+                <div class="expo-text">seats 01</div>
+                <div class="expo-text">$14000</div>
+                <div class="info-text">VIP: </div>
+                <div class="expo-text">seats 01</div>
+                <div class="expo-text">$14000</div>
+            </div>
 
 
         </div>
+
 
     </div>
 
