button and total prices added

--- a/second_task/index.html
+++ b/second_task/index.html
@@ -18,7 +18,9 @@
 
 <body>
     <div class="ticket-background">
-        <h5 class=>Your ticket</h5>
+        <div class="your-ticket">
+            <h1>Your ticket</h1>
+        </div>
 
         <div class="ticket-no-container">
 
@@ -31,20 +33,42 @@
             <div class="group5">
                 <div class="info-text">VIP: </div>
                 <div class="expo-text">seats 01</div>
-                <div class="expo-text">$14000</div>
-                <div class="info-text">VIP: </div>
+                <div style="text-align: end;" class="expo-text">$14000</div>
+                <div class="info-text">First class: </div>
                 <div class="expo-text">seats 01</div>
-                <div class="expo-text">$14000</div>
-                <div class="info-text">VIP: </div>
-                <div class="expo-text">seats 01</div>
-                <div class="expo-text">$14000</div>
+                <div style="text-align: end;" class="expo-text">$1500</div>
+                <div class="info-text">Economy: </div>
+                <div class="expo-text">seats 02</div>
+                <div style="text-align: end;" class="expo-text">$2000</div>
             </div>
+        </div>
+        <div class="logo-in-card">
+            <img class="logo1" src="assets/logo1_svg.svg" alt="" srcset="">
+            <img class="logo2" src="assets/logo2_svg.svg" alt="" srcset="">
+        </div>
+        <div class="descriptions">
 
+            <div class="info-text">Cruising from:</div>
+            <div class="expo-text">London, England</div>
+            <div class="info-text">Cruising to:</div>
+            <div class="expo-text">NewYork, USA</div>
+            <div class="info-text">Departure:</div>
+
+            <div class="expo-text">07/23/21</div>
+            <div class="info-text">Return:</div>
+            <div class="expo-text">08/03/21</div>
 
         </div>
+        <div class="checkout-line"></div>
+        <div class="total-container">
+            <p class="total-text">Total</p>
+            <p class="total-text">$17500</p>
+        </div>
 
+        <button class="print-button" type="submit">Print the ticket</button>
 
     </div>
+
 
     <div class="logo">
         <img class="logo1" src="assets/logo1.png" alt="" srcset="">
@@ -53,4 +77,4 @@
 
 </body>
 
-</html>
+</html>/
