signature added, printing ticket page is done

--- a/second_task/index.html
+++ b/second_task/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="design.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link href="https://fonts.googleapis.com/css2?family=Ruthie&display=swap" rel="stylesheet">
 </head>
 
 <header>
@@ -66,7 +67,9 @@
         </div>
 
         <button class="print-button" type="submit">Print the ticket</button>
-
+        <div class="signature">
+            Kings Cruiser
+        </div>
     </div>
 
 
