Third task updates

--- a/third_task/index.html
+++ b/third_task/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display" rel="stylesheet">
 </head>
 
 <body>
@@ -20,14 +21,21 @@
                     <img src="assets/logo.svg" alt="" srcset="">
                 </div>
                 <div class="menu">
-                    <div class="menu-button">Home</div>
-                    <div class="menu-button">Destinations</div>
-                    <div class="menu-button">About</div>
-                    <div class="menu-button">Partner</div>
-                </div>
-                <div class="login-register">
+                    <button class="menu-button menu-button-selected">Home</button>
+                    <button class="menu-button" type="button">Destinations</button>
+                    <button class="menu-button" type="button">About</button>
+                    <button class="menu-button" type="button">Partner</button>
+                    <button class="login-register-button login"> Login</button>
+                    <button class="login-register-button register"> Register</button>
 
                 </div>
+            </div>
+            <div class="section01-content-wrapper">
+                <div class="info-wrapper">
+                    <div class="text-header1">Explore and </div><br>
+                    <div class="text-header1">Travel</div>
+                </div>
+                <div class="image-wrapper"> <img src="assets/section01-img.svg" alt="" srcset=""></div>
             </div>
         </div>
     </div>
