third task updates

--- a/third_task/index.html
+++ b/third_task/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="main">
         <div class="section01">
-            <div class="header">
+            <div class="nav-top-bar">
                 <div class="logo">
                     <img src="assets/logo.svg" alt="" srcset="">
                 </div>
@@ -34,8 +34,23 @@
                 <div class="info-wrapper">
                     <div class="text-header1">Explore and </div><br>
                     <div class="text-header1">Travel</div>
+
+                    <div class="seperation-line"> </div>
+                    <div class="selection-grid">
+                        <div> <label for="location"> </label>
+                            <select name="location" id="location">
+                          <option value="Location">Location</option>
+                        </div>
+                        <div>
+                        <label for="activity"></label>
+                        <select name="activity" id="activity"></select>
+                            <option value="activity">activity</option>
+                            </select>
+                        </div>
+
+                    </div>
                 </div>
-                <div class="image-wrapper"> <img src="assets/section01-img.svg" alt="" srcset=""></div>
+                <div class="image-wrapper"> <img class="img-sec-01" src="assets/section01-img.svg" alt="" srcset=""></div>
             </div>
         </div>
     </div>
