third task hero page dropdown added ( needs CSS implementation)

--- a/third_task/index.html
+++ b/third_task/index.html
@@ -32,23 +32,48 @@
             </div>
             <div class="section01-content-wrapper">
                 <div class="info-wrapper">
-                    <div class="text-header1">Explore and </div><br>
-                    <div class="text-header1">Travel</div>
+                    <div class="info-text">
+                        <div class="text-header1">Explore and </div><br>
+                        <div class="text-header1">Travel</div>
+                    </div>
 
+                    <div class="text-header2"> Holiday finder</div>
                     <div class="seperation-line"> </div>
                     <div class="selection-grid">
-                        <div> <label for="location"> </label>
-                            <select name="location" id="location">
-                          <option value="Location">Location</option>
-                        </div>
-                        <div>
-                        <label for="activity"></label>
-                        <select name="activity" id="activity"></select>
-                            <option value="activity">activity</option>
-                            </select>
-                        </div>
 
+
+                        <select name="location" id="location"> 
+                            <option value="">Location</option>
+                            <option value="Istanbul">Istanbul</option>
+                            <option value="Eskisehir">Eskisehir</option>
+                            <option value="Ankara">Ankara</option>
+                        </select>
+
+                        <select name="location" id="location"> 
+                            <option value="">Activity</option>
+                            <option value="Istanbul">Istanbul</option>
+                            <option value="Eskisehir">Eskisehir</option>
+                            <option value="Ankara">Ankara</option>
+                        </select>
+
+                        <select name="location" id="location"> 
+                            <option value="">Grade</option>
+                            <option value="Istanbul">Istanbul</option>
+                            <option value="Eskisehir">Eskisehir</option>
+                            <option value="Ankara">Ankara</option>
+                        </select>
+
+                        <select name="location" id="location"> 
+                            <option value="">Date</option>
+                            <option value="Istanbul">Istanbul</option>
+                            <option value="Eskisehir">Eskisehir</option>
+                            <option value="Ankara">Ankara</option>
+                        </select>
                     </div>
+
+
+
+
                 </div>
                 <div class="image-wrapper"> <img class="img-sec-01" src="assets/section01-img.svg" alt="" srcset=""></div>
             </div>
