footer and trending stories pages

--- a/third_task/index.html
+++ b/third_task/index.html
@@ -1,84 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="design.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display" rel="stylesheet">
-</head>
-
-<body>
-    <div class="main">
-        <div class="section01">
-            <div class="nav-top-bar">
-                <div class="logo">
-                    <img src="assets/logo.svg" alt="" srcset="">
+<html>
+    <head>
+        <title>Tour and Travel</title>
+        <link rel="stylesheet" href="trial1_design.css" type="text/css">
+        <link rel="stylesheet" href="design.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mulish">
+        <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display" rel="stylesheet">
+        </head>
+    <body>
+        <header>
+            <h1>Some stuff</h1>
+        </header>
+        <main>
+            <div class="trending-stories-container">
+                <img src="assets/plus_sign.svg" alt="" class="trending-stories-plus-sign">
+                <img src="assets/small-circle.svg" alt="" class="trending-stories-circle-1">
+                <div class="trending-stories-heading-container">
+                    <div class="trending-stories-h1">Trending stories</div>
+                    <div class="trending-stories-viewAll"> View all <img src="assets/small_arrow.svg" alt=""></div>
                 </div>
-                <div class="menu">
-                    <button class="menu-button menu-button-selected">Home</button>
-                    <button class="menu-button" type="button">Destinations</button>
-                    <button class="menu-button" type="button">About</button>
-                    <button class="menu-button" type="button">Partner</button>
-                    <button class="login-register-button login"> Login</button>
-                    <button class="login-register-button register"> Register</button>
-
+                <div class="trending-stories-row">
+                    <div class="trending-stories-columns">
+                        <div class="trending-stories-img-container">
+                            <img src="assets/meditating_person.png" alt="" class="trending-stories-img">
+                        </div>
+                        <div>
+                            <h1 class="trending-stories-subheadings">The many benefits of taking a healing holiday</h1>
+                            <p class="trending-stories-texts">‘Helaing holidays’ are on the rise tohelp maximise your health and happines...</p>
+                            <p class="trending-stories-readMore">Read more</p>
+                        </div>
+                    </div>
+                    <div class="trending-stories-columns">
+                        <div class="trending-stories-img-container">
+                            <img src="assets/food.png" alt="" class="trending-stories-img">
+                        </div>
+                        <div>
+                            <h1 class="trending-stories-subheadings">The best Kyoto restaurant to try Japanese food</h1>
+                            <p class="trending-stories-texts">From tofu to teahouses, here’s our guide to Kyoto’s best restaurants to visit...</p>
+                            <p class="trending-stories-readMore">Read more</p>
+                        </div>
+                    </div>
+                    <div class="trending-stories-columns">
+                        <div class="trending-stories-img-container">
+                            <img src="assets/castle.png" alt="" class="trending-stories-img">
+                        </div>
+                        <div>
+                            <h1 class="trending-stories-subheadings">Skip Chichen Itza and head to this remote Yucatan</h1>
+                            <p class="trending-stories-texts">It’s remote and challenging to get, but braving the jungle and exploring these ruins without the...</p>
+                            <p class="trending-stories-readMore">Read more</p>
+                        </div>
+                    </div>
+                    <div class="trending-stories-columns">
+                        <div class="trending-stories-img-container">
+                            <img src="assets/surfing_person.png" alt="" class="trending-stories-img">
+                        </div>
+                        <div>
+                            <h1 class="trending-stories-subheadings">Surf’s up at these beginner spots around the world</h1>
+                            <p class="trending-stories-texts">If learning to surf has in on your to- do list for a while, the good news is: it’s never too late...</p>
+                            <p class="trending-stories-readMore">Read more</p>
+                        </div>
+                    </div>
+                </div>
+                <img src="assets/small-circle.svg" alt="" class="trending-stories-circle-2">
+            </div>
+        </main>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-row">
+                    <div class="footer-col1">
+                        <img src="assets/icon.svg" alt="">
+                        <div class="footer-text">Plan and book your perfect trip with expert advice, travel tips destination information from us</div>
+                        <div>©2020 Thousand Sunny. All rights reserved</div>
+                    </div>
+                    <div class="footer-col2">
+                        <div class="footer-heading">Destinations</div>
+                        <div>Africa</div>
+                        <div>Antarctica</div>
+                        <div>Asia</div>
+                        <div>Europe</div>
+                        <div>America</div>
+                    </div>
+                    <div class="footer-col2">
+                        <div class="footer-heading">Shop</div>
+                        <div>Destination Guides</div>
+                        <div>Pictorial & Gifts</div>
+                        <div>Special Offers</div>
+                        <div>Delivery Times</div>
+                        <div>FAQs</div>
+                    </div>
+                    <div class="footer-col2">
+                        <div class="footer-heading">Interests</div>
+                        <div>Adventure Travel</div>
+                        <div>Art And Culture</div>
+                        <div>Wildlife And Nature</div>
+                        <div>Family Holidays</div>
+                        <div>Food And Drink</div>
+                    </div>
+                </div>
+                <div class="footer-rectangle"></div>
+                <div class="footer-icons">
+                    <img src="assets/twitter.svg" alt="">
+                    <img src="assets/facebook.svg" alt="">
+                    <img src="assets/instagram.svg" alt="">
+                    <img src="assets/linkedn.svg" alt="">
+                    <img src="assets/youtube.svg" alt="">
                 </div>
             </div>
-            <div class="section01-content-wrapper">
-                <div class="info-wrapper">
-                    <div class="info-text">
-                        <div class="text-header1">Explore and </div><br>
-                        <div class="text-header1">Travel</div>
-                    </div>
-
-                    <div class="text-header2"> Holiday finder</div>
-                    <div class="seperation-line"> </div>
-                    <div class="selection-grid">
-
-
-                        <select name="location" id="location"> 
-                            <option value="">Location</option>
-                            <option value="Istanbul">Istanbul</option>
-                            <option value="Eskisehir">Eskisehir</option>
-                            <option value="Ankara">Ankara</option>
-                        </select>
-
-                        <select name="location" id="location"> 
-                            <option value="">Activity</option>
-                            <option value="Istanbul">Istanbul</option>
-                            <option value="Eskisehir">Eskisehir</option>
-                            <option value="Ankara">Ankara</option>
-                        </select>
-
-                        <select name="location" id="location"> 
-                            <option value="">Grade</option>
-                            <option value="Istanbul">Istanbul</option>
-                            <option value="Eskisehir">Eskisehir</option>
-                            <option value="Ankara">Ankara</option>
-                        </select>
-
-                        <select name="location" id="location"> 
-                            <option value="">Date</option>
-                            <option value="Istanbul">Istanbul</option>
-                            <option value="Eskisehir">Eskisehir</option>
-                            <option value="Ankara">Ankara</option>
-                        </select>
-                    </div>
-
-
-
-
-                </div>
-                <div class="image-wrapper"> <img class="img-sec-01" src="assets/section01-img.svg" alt="" srcset=""></div>
-            </div>
-        </div>
-    </div>
-</body>
-
+        </footer>
+    </body>
 </html>
