testimonial page image problem

--- a/third_task/index.html
+++ b/third_task/index.html
@@ -15,12 +15,33 @@
             <h1>Some stuff</h1>
         </header>
         <main>
+            <!-- Testimonials -->
+            <div class="testimonials-container">
+                <img src="assets/testimonials_small_circle.svg" alt="" class="testimonials-small-circle">
+                <h1 class="testimonials-h1">Testimonials</h1>
+                <div class="testimonials-row">
+                    <div class="testimonials-column">
+                        <div class="testimonials-stars-container">
+                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img-container">
+                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img-container">
+                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img-container">
+                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img-container">
+                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img-container">
+                        </div>
+                        <p class="testimonials-p">“Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus ac scelerisque eu, facilisis quis purus. Morbi blandit sit amet turpis nec”</p>
+                        <h2 class="testimonials-h2">Edward Newgate</h2>
+                        <p class="testimonials-p2">Founder Circle</p>
+                    </div>
+                    <img src="assets/testimonials_img.png" alt="" class="testimonials-img">
+                </div>
+            </div>
+            <!-- Trending Stories -->
             <div class="trending-stories-container">
-                <img src="assets/plus_sign.svg" alt="" class="trending-stories-plus-sign">
-                <img src="assets/small-circle.svg" alt="" class="trending-stories-circle-1">
+                <img src="assets/trending_stories_plus_sign.svg" alt="" class="trending-stories-plus-sign">
+                <img src="assets/trending_stories_circle.svg" alt="" class="trending-stories-circle-1">
                 <div class="trending-stories-heading-container">
                     <div class="trending-stories-h1">Trending stories</div>
-                    <div class="trending-stories-viewAll"> View all <img src="assets/small_arrow.svg" alt=""></div>
+                    <div class="trending-stories-viewAll"> View all <img src="assets/trending_stories_arrow.svg" alt=""></div>
                 </div>
                 <div class="trending-stories-row">
                     <div class="trending-stories-columns">
@@ -64,14 +85,14 @@
                         </div>
                     </div>
                 </div>
-                <img src="assets/small-circle.svg" alt="" class="trending-stories-circle-2">
+                <img src="assets/trending_stories_circle.svg" alt="" class="trending-stories-circle-2">
             </div>
         </main>
         <footer>
             <div class="footer-container">
                 <div class="footer-row">
                     <div class="footer-col1">
-                        <img src="assets/icon.svg" alt="">
+                        <img src="assets/footer_logo.svg" alt="">
                         <div class="footer-text">Plan and book your perfect trip with expert advice, travel tips destination information from us</div>
                         <div>©2020 Thousand Sunny. All rights reserved</div>
                     </div>
