testimonials image problem not fixed

--- a/third_task/index.html
+++ b/third_task/index.html
@@ -22,11 +22,11 @@
                 <div class="testimonials-row">
                     <div class="testimonials-column">
                         <div class="testimonials-stars-container">
-                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img-container">
-                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img-container">
-                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img-container">
-                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img-container">
-                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img-container">
+                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img">
+                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img">
+                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img">
+                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img">
+                            <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img">
                         </div>
                         <p class="testimonials-p">“Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus ac scelerisque eu, facilisis quis purus. Morbi blandit sit amet turpis nec”</p>
                         <h2 class="testimonials-h2">Edward Newgate</h2>
