footer, trending stories, testimonials and guides by thousand sunny pages

--- a/third_task/index.html
+++ b/third_task/index.html
@@ -15,6 +15,20 @@
             <h1>Some stuff</h1>
         </header>
         <main>
+            <!-- Guides by Thousand Sunny -->
+            <div class="guides-container">
+                <img src="assets/guides_circle.svg" alt="" class="guides-circle">
+                <div class="guides-row">
+                    <div class="guides-column">
+                        <h1 class="guides-h1"> Guides by Thousand Sunny</h1>
+                        <p class="guides-p">Packed with tips and advice from our on-the-ground experts, our city guides app (iOS and Android) is the ultimate resource before and during a trip.</p>
+                        <button type="button" class="guides-button">Download</button> 
+                    </div>
+                    <img src="assets/guides_img.png" alt="" class="guides-img">
+                    <img src="assets/guides_plus.svg" alt="" class="guides-plus">
+                </div>
+                <img src="assets/guides_tilted_plus.svg" alt="" class="guides-tilted-plus">
+            </div>
             <!-- Testimonials -->
             <div class="testimonials-container">
                 <img src="assets/testimonials_small_circle.svg" alt="" class="testimonials-small-circle">
