--- a/third_task/index.html
+++ b/third_task/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display" rel="stylesheet">
 </head>
 
@@ -49,6 +50,7 @@
                             <option value="Ankara">Ankara</option>
                         </select>
 
+
                         <select name="location" id="location"> 
                             <option value="">Activity</option>
                             <option value="Istanbul">Istanbul</option>
@@ -70,6 +72,7 @@
                             <option value="Ankara">Ankara</option>
                         </select>
                     </div>
+                    <div class="login-register-button explore">Explore</div>
 
 
 
@@ -77,6 +80,18 @@
                 </div>
                 <div class="image-wrapper"> <img class="img-sec-01" src="assets/section01-img.svg" alt="" srcset=""></div>
             </div>
+
+        </div>
+        <div class="section02">
+            <div class="section02-image-wrapper">
+                <img src="assets/section02-img.svg" alt="">
+            </div>
+            <div class="section02-info-wrapper">
+                <div class="text-header2 "> A new way to explore the<br> world</div>
+                <p class="mulish">For decades travellers have reached for Lonely Planet books when looking to plan and execute their perfect trip, but now, they can also let Lonely Planet Experiences lead the way</p>
+                <button class="login-register-button register learnmorebutton"> Learn more</button>
+            </div>
+
         </div>
     </div>
 </body>
