working on testimonials page image problem

--- a/third_task/index.html
+++ b/third_task/index.html
@@ -46,7 +46,11 @@
                         <h2 class="testimonials-h2">Edward Newgate</h2>
                         <p class="testimonials-p2">Founder Circle</p>
                     </div>
-                    <img src="assets/testimonials_img.png" alt="" class="testimonials-img">
+                    <div class="testimonials-img-container">
+                        <img src="assets/testimonials_big_circle.svg" alt="" class="testimonials-big-circle">
+                        <img src="assets/testimonials_plus_sign.svg" alt="" class="testimonials-plus-sign">
+                        <img src="assets/testimonials_person.png" alt="" class="testimonials-person"> 
+                    </div>
                 </div>
             </div>
             <!-- Trending Stories -->
