--- a/third_task/index.html
+++ b/third_task/index.html
@@ -93,6 +93,24 @@
             </div>
 
         </div>
+        <div class="section03">
+            <div class="section03-header">
+                <div class="text-header2 featured-destinations-text">
+                    Featured destinations
+                </div>
+                <div style="display: flex; flex-direction: row; align-items: center;justify-content: space-between;">
+                    <button type="submit" class="view-all-button"> View All</button>
+                    <img src="assets/right-arrow.svg" alt="" srcset="">
+                </div>
+            </div>
+            <div class="featured-destinations-row">
+                <div><img src="assets/section03-img01.svg" alt="" srcset=""></div>
+                <div><img src="assets/section03-img02.svg" alt="" srcset=""></div>
+                <div><img src="assets/section03-img03.svg" alt="" srcset=""></div>
+                <div><img src="assets/section03-img04.svg" alt="" srcset=""></div>
+
+            </div>
+        </div>
     </div>
 </body>
 
