--- a/third_task/index.html
+++ b/third_task/index.html
@@ -108,10 +108,138 @@
                 <div><img src="assets/section03-img02.svg" alt="" srcset=""></div>
                 <div><img src="assets/section03-img03.svg" alt="" srcset=""></div>
                 <div><img src="assets/section03-img04.svg" alt="" srcset=""></div>
-
             </div>
         </div>
     </div>
+    <!-- Guides by Thousand Sunny -->
+    <div class="guides-container">
+        <img src="assets/guides_circle.svg" alt="" class="guides-circle">
+        <div class="guides-row">
+            <div class="guides-column">
+                <h1 class="guides-h1"> Guides by Thousand Sunny</h1>
+                <p class="guides-p">Packed with tips and advice from our on-the-ground experts, our city guides app (iOS and Android) is the ultimate resource before and during a trip.</p>
+                <button type="button" class="guides-button">Download</button> 
+            </div>
+            <img src="assets/guides_img.png" alt="" class="guides-img">
+            <img src="assets/guides_plus.svg" alt="" class="guides-plus">
+        </div>
+        <img src="assets/guides_tilted_plus.svg" alt="" class="guides-tilted-plus">
+    </div>
+    <!-- Testimonials -->
+    <div class="testimonials-container">
+        <img src="assets/testimonials_small_circle.svg" alt="" class="testimonials-small-circle">
+        <h1 class="testimonials-h1">Testimonials</h1>
+        <div class="testimonials-row">
+            <div class="testimonials-column">
+                <div class="testimonials-stars-container">
+                    <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img">
+                    <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img">
+                    <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img">
+                    <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img">
+                    <img src="assets/testimonials_star.svg" alt="" class="testimonials-star-img">
+                </div>
+                <p class="testimonials-p">“Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus ac scelerisque eu, facilisis quis purus. Morbi blandit sit amet turpis nec”</p>
+                <h2 class="testimonials-h2">Edward Newgate</h2>
+                <p class="testimonials-p2">Founder Circle</p>
+            </div>
+            <img src="assets/testimonials_img.png" alt="" class="testimonials-img">
+        </div>
+    </div>
+    <!-- Trending Stories -->
+    <div class="trending-stories-container">
+        <img src="assets/trending_stories_plus_sign.svg" alt="" class="trending-stories-plus-sign">
+        <img src="assets/trending_stories_circle.svg" alt="" class="trending-stories-circle-1">
+        <div class="trending-stories-heading-container">
+            <div class="trending-stories-h1">Trending stories</div>
+            <div class="trending-stories-viewAll"> View all <img src="assets/trending_stories_arrow.svg" alt=""></div>
+        </div>
+        <div class="trending-stories-row">
+            <div class="trending-stories-columns">
+                <div class="trending-stories-img-container">
+                    <img src="assets/meditating_person.png" alt="" class="trending-stories-img">
+                </div>
+                <div>
+                    <h1 class="trending-stories-subheadings">The many benefits of taking a healing holiday</h1>
+                    <p class="trending-stories-texts">‘Helaing holidays’ are on the rise tohelp maximise your health and happines...</p>
+                    <p class="trending-stories-readMore">Read more</p>
+                </div>
+            </div>
+            <div class="trending-stories-columns">
+                <div class="trending-stories-img-container">
+                    <img src="assets/food.png" alt="" class="trending-stories-img">
+                </div>
+                <div>
+                    <h1 class="trending-stories-subheadings">The best Kyoto restaurant to try Japanese food</h1>
+                    <p class="trending-stories-texts">From tofu to teahouses, here’s our guide to Kyoto’s best restaurants to visit...</p>
+                    <p class="trending-stories-readMore">Read more</p>
+                </div>
+            </div>
+            <div class="trending-stories-columns">
+                <div class="trending-stories-img-container">
+                    <img src="assets/castle.png" alt="" class="trending-stories-img">
+                </div>
+                <div>
+                    <h1 class="trending-stories-subheadings">Skip Chichen Itza and head to this remote Yucatan</h1>
+                    <p class="trending-stories-texts">It’s remote and challenging to get, but braving the jungle and exploring these ruins without the...</p>
+                    <p class="trending-stories-readMore">Read more</p>
+                </div>
+            </div>
+            <div class="trending-stories-columns">
+                <div class="trending-stories-img-container">
+                    <img src="assets/surfing_person.png" alt="" class="trending-stories-img">
+                </div>
+                <div>
+                    <h1 class="trending-stories-subheadings">Surf’s up at these beginner spots around the world</h1>
+                    <p class="trending-stories-texts">If learning to surf has in on your to- do list for a while, the good news is: it’s never too late...</p>
+                    <p class="trending-stories-readMore">Read more</p>
+                </div>
+            </div>
+        </div>
+        <img src="assets/trending_stories_circle.svg" alt="" class="trending-stories-circle-2">
+    </div>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-row">
+                <div class="footer-col1">
+                    <img src="assets/footer_logo.svg" alt="">
+                    <div class="footer-text">Plan and book your perfect trip with expert advice, travel tips destination information from us</div>
+                    <div>©2020 Thousand Sunny. All rights reserved</div>
+                </div>
+                <div class="footer-col2">
+                    <div class="footer-heading">Destinations</div>
+                    <div>Africa</div>
+                    <div>Antarctica</div>
+                    <div>Asia</div>
+                    <div>Europe</div>
+                    <div>America</div>
+                </div>
+                <div class="footer-col2">
+                    <div class="footer-heading">Shop</div>
+                    <div>Destination Guides</div>
+                    <div>Pictorial & Gifts</div>
+                    <div>Special Offers</div>
+                    <div>Delivery Times</div>
+                    <div>FAQs</div>
+                </div>
+                <div class="footer-col2">
+                    <div class="footer-heading">Interests</div>
+                    <div>Adventure Travel</div>
+                    <div>Art And Culture</div>
+                    <div>Wildlife And Nature</div>
+                    <div>Family Holidays</div>
+                    <div>Food And Drink</div>
+                </div>
+            </div>
+            <div class="footer-rectangle"></div>
+            <div class="footer-icons">
+                <img src="assets/twitter.svg" alt="">
+                <img src="assets/facebook.svg" alt="">
+                <img src="assets/instagram.svg" alt="">
+                <img src="assets/linkedn.svg" alt="">
+                <img src="assets/youtube.svg" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
